include/RustAPI.hpp

    // logging
    RUSTAPI_DLL void geode_log_info(const char* msg);
    RUSTAPI_DLL void geode_log_warn(const char* msg);
    RUSTAPI_DLL void geode_log_error(const char* msg);
    // popup
    RUSTAPI_DLL void geode_create_quick_popup(
        const char* title,
        const char* content,
        const char* btn1,
        const char* btn2,
        void (*callback)(bool)
    );
    RUSTAPI_DLL void geode_create_alert_popup(
        const char* title,
        const char* content,
        const char* btn1,
        const char* btn2,
        void (*callback)(bool)
    );
    RUSTAPI_DLL void* geode_popup_create(
        float width,
        float height,
        void (*on_init)(void* popup, void* user_data),
        void (*on_close)(void* popup, void* user_data),
        void (*on_destruct)(void* user_data),
        void* user_data
    );
    RUSTAPI_DLL void geode_popup_show(void* popup);
    RUSTAPI_DLL void geode_popup_close(void* popup);
    RUSTAPI_DLL void geode_popup_set_title(void* popup, const char* title);
    RUSTAPI_DLL void* geode_popup_get_main_layer(void* popup);
    RUSTAPI_DLL void* geode_popup_get_close_btn(void* popup);
    RUSTAPI_DLL void* geode_popup_get_bg_sprite(void* popup);
    RUSTAPI_DLL void geode_popup_get_size(void* popup, float* w, float* h);
    RUSTAPI_DLL void* geode_popup_get_button_menu(void* popup);
    RUSTAPI_DLL void geode_popup_set_no_elasticity(void* popup, bool val);
    RUSTAPI_DLL bool geode_popup_get_no_elasticity(void* popup);
    RUSTAPI_DLL void geode_popup_set_reverse_key_back(void* popup, bool val);
    RUSTAPI_DLL bool geode_popup_get_reverse_key_back(void* popup);
    RUSTAPI_DLL void geode_popup_set_close_button_spr(void* popup, void* sprite, float scale);
    // version info
    RUSTAPI_DLL char* geode_version_parse(const char* version_str);
    RUSTAPI_DLL int geode_version_compare(const char* a, const char* b);
    RUSTAPI_DLL bool geode_version_matches(const char* constraint, const char* version);
    // color provider
    RUSTAPI_DLL void geode_color_define(const char* id, uint8_t r, uint8_t g, uint8_t b, uint8_t a);
    RUSTAPI_DLL void geode_color_override(const char* id, uint8_t r, uint8_t g, uint8_t b, uint8_t a);
    RUSTAPI_DLL void geode_color_reset(const char* id);
    RUSTAPI_DLL void geode_color_color(const char* id, uint8_t* r, uint8_t* g, uint8_t* b, uint8_t* a);
    RUSTAPI_DLL void geode_color_color3b(const char* id, uint8_t* r, uint8_t* g, uint8_t* b);
    // cocos color utilities
    RUSTAPI_DLL void geode_cocos_invert3b(uint8_t r, uint8_t g, uint8_t b, uint8_t* or_, uint8_t* og, uint8_t* ob);
    RUSTAPI_DLL void geode_cocos_lighten3b(uint8_t r, uint8_t g, uint8_t b, int amount, uint8_t* or_, uint8_t* og, uint8_t* ob);
    RUSTAPI_DLL void geode_cocos_darken3b(uint8_t r, uint8_t g, uint8_t b, int amount, uint8_t* or_, uint8_t* og, uint8_t* ob);
    RUSTAPI_DLL bool geode_cocos_cc3b_from_hex(const char* hex, uint8_t* r, uint8_t* g, uint8_t* b);
    RUSTAPI_DLL bool geode_cocos_cc4b_from_hex(const char* hex, uint8_t* r, uint8_t* g, uint8_t* b, uint8_t* a);
    RUSTAPI_DLL void geode_cocos_invert4b(uint8_t r, uint8_t g, uint8_t b, uint8_t a, uint8_t* or_, uint8_t* og, uint8_t* ob, uint8_t* oa);
    RUSTAPI_DLL void geode_cocos_to3b(uint8_t r, uint8_t g, uint8_t b, uint8_t a, uint8_t* or_, uint8_t* og, uint8_t* ob);
    RUSTAPI_DLL void geode_cocos_to4b(uint8_t r, uint8_t g, uint8_t b, uint8_t alpha, uint8_t* or_, uint8_t* og, uint8_t* ob, uint8_t* oa);
    RUSTAPI_DLL void geode_cocos_to4f(uint8_t r, uint8_t g, uint8_t b, uint8_t a, float* or_, float* og, float* ob, float* oa);
    RUSTAPI_DLL char* geode_cocos_cc3b_to_hex(uint8_t r, uint8_t g, uint8_t b);
    RUSTAPI_DLL char* geode_cocos_cc4b_to_hex(uint8_t r, uint8_t g, uint8_t b, uint8_t a);
    // web 
    RUSTAPI_DLL void geode_web_open_link(const char* url);
    RUSTAPI_DLL void* geode_web_request_new();
    RUSTAPI_DLL void geode_web_request_free(void* handle);
    RUSTAPI_DLL void geode_web_request_header(void* handle, const char* name, const char* value);
    RUSTAPI_DLL void geode_web_request_param(void* handle, const char* name, const char* value);
    RUSTAPI_DLL void geode_web_request_method(void* handle, const char* method);
    RUSTAPI_DLL void geode_web_request_timeout(void* handle, int seconds);
    RUSTAPI_DLL void geode_web_request_body_string(void* handle, const char* data);
    RUSTAPI_DLL void geode_web_request_body_json(void* handle, const char* json);
    
    typedef void (*RustWebRequestCallback)(int status, const char* headers_json, const char* body, const char* error, void* user_data);
    RUSTAPI_DLL void geode_web_request_send(void* handle, const char* method, const char* url, RustWebRequestCallback cb, void* user_data);
    // time and tasks or tasks and tiem idk sayhow u want
    RUSTAPI_DLL uint64_t geode_task_delay(double seconds, void (*cb)(uint64_t id, void* data), void* data);
    RUSTAPI_DLL uint64_t geode_task_every(double seconds, void (*cb)(uint64_t id, void* data), void* data);
    RUSTAPI_DLL void geode_task_run_main(void (*cb)(void*), void* data);
    // platform
    RUSTAPI_DLL bool geode_platform_is_windows();
    RUSTAPI_DLL bool geode_platform_is_macos();
    RUSTAPI_DLL bool geode_platform_is_ios();
    RUSTAPI_DLL bool geode_platform_is_android();
    // string free
    RUSTAPI_DLL void geode_free_string(char* s);