src/ffi.rs

    
    pub fn geode_web_open_link(url: *const c_char);
    pub fn geode_web_request_new() -> *mut c_void;
    pub fn geode_web_request_free(handle: *mut c_void);
    pub fn geode_web_request_header(handle: *mut c_void, name: *const c_char, value: *const c_char);
    pub fn geode_web_request_param(handle: *mut c_void, name: *const c_char, value: *const c_char);
    pub fn geode_web_request_method(handle: *mut c_void, method: *const c_char);
    pub fn geode_web_request_timeout(handle: *mut c_void, seconds: i32);
    pub fn geode_web_request_body_string(handle: *mut c_void, data: *const c_char);
    pub fn geode_web_request_body_json(handle: *mut c_void, json: *const c_char);
    pub fn geode_web_request_send(handle: *mut c_void, method: *const c_char, url: *const c_char, cb: RustWebRequestCallback, user_data: *mut c_void);

    pub fn geode_create_quick_popup(
        title: *const c_char,
        content: *const c_char,
        btn1: *const c_char,
        btn2: *const c_char,
        cb: extern "C" fn(bool)
    );
    pub fn geode_create_alert_popup(
        title: *const c_char,
        content: *const c_char,
        btn1: *const c_char,
        btn2: *const c_char,
        cb: extern "C" fn(bool)
    );
    pub fn geode_popup_create(
        width: f32,
        height: f32,
        on_init: extern "C" fn(*mut c_void, *mut c_void),
        on_close: extern "C" fn(*mut c_void, *mut c_void),
        on_destruct: extern "C" fn(*mut c_void),
        user_data: *mut c_void
    ) -> *mut c_void;
    pub fn geode_popup_show(popup: *mut c_void);
    pub fn geode_popup_close(popup: *mut c_void);
    pub fn geode_popup_set_title(popup: *mut c_void, title: *const c_char);
    pub fn geode_popup_get_main_layer(popup: *mut c_void) -> *mut GeodeNode;
    pub fn geode_popup_get_close_btn(popup: *mut c_void) -> *mut GeodeNode;
    pub fn geode_popup_get_bg_sprite(popup: *mut c_void) -> *mut GeodeNode;
    pub fn geode_popup_get_size(popup: *mut c_void, w: *mut f32, h: *mut f32);
    pub fn geode_popup_get_button_menu(popup: *mut c_void) -> *mut GeodeNode;
    pub fn geode_popup_set_no_elasticity(popup: *mut c_void, val: bool);
    pub fn geode_popup_get_no_elasticity(popup: *mut c_void) -> bool;
    pub fn geode_popup_set_reverse_key_back(popup: *mut c_void, val: bool);
    pub fn geode_popup_get_reverse_key_back(popup: *mut c_void) -> bool;
    pub fn geode_popup_set_close_button_spr(popup: *mut c_void, sprite: *mut GeodeNode, scale: f32);



    // color provider
    pub fn geode_color_define(id: *const c_char, r: u8, g: u8, b: u8, a: u8);
    pub fn geode_color_override(id: *const c_char, r: u8, g: u8, b: u8, a: u8);
    pub fn geode_color_reset(id: *const c_char);
    pub fn geode_color_color(id: *const c_char, r: *mut u8, g: *mut u8, b: *mut u8, a: *mut u8);
    pub fn geode_color_color3b(id: *const c_char, r: *mut u8, g: *mut u8, b: *mut u8);

    // cocos color stuff
    pub fn geode_cocos_invert3b(r: u8, g: u8, b: u8, or_: *mut u8, og: *mut u8, ob: *mut u8);
    pub fn geode_cocos_lighten3b(r: u8, g: u8, b: u8, amount: i32, or_: *mut u8, og: *mut u8, ob: *mut u8);
    pub fn geode_cocos_darken3b(r: u8, g: u8, b: u8, amount: i32, or_: *mut u8, og: *mut u8, ob: *mut u8);
    pub fn geode_cocos_cc3b_from_hex(hex: *const c_char, r: *mut u8, g: *mut u8, b: *mut u8) -> bool;
    pub fn geode_cocos_cc4b_from_hex(hex: *const c_char, r: *mut u8, g: *mut u8, b: *mut u8, a: *mut u8) -> bool;
    pub fn geode_cocos_invert4b(r: u8, g: u8, b: u8, a: u8, or_: *mut u8, og: *mut u8, ob: *mut u8, oa: *mut u8);
    pub fn geode_cocos_to3b(r: u8, g: u8, b: u8, a: u8, or_: *mut u8, og: *mut u8, ob: *mut u8);
    pub fn geode_cocos_to4b(r: u8, g: u8, b: u8, alpha: u8, or_: *mut u8, og: *mut u8, ob: *mut u8, oa: *mut u8);
    pub fn geode_cocos_to4f(r: u8, g: u8, b: u8, a: u8, or_: *mut f32, og: *mut f32, ob: *mut f32, oa: *mut f32);
    pub fn geode_cocos_cc3b_to_hex(r: u8, g: u8, b: u8) -> *mut c_char;
    pub fn geode_cocos_cc4b_to_hex(r: u8, g: u8, b: u8, a: u8) -> *mut c_char;


    // version
    pub fn geode_version_parse(version_str: *const c_char) -> *mut c_char;
    pub fn geode_version_compare(a: *const c_char, b: *const c_char) -> i32;
    pub fn geode_version_matches(constraint: *const c_char, version: *const c_char) -> bool;

    // platform
    pub fn geode_platform_is_windows() -> bool;
    pub fn geode_platform_is_macos() -> bool;
    pub fn geode_platform_is_ios() -> bool;
    pub fn geode_platform_is_android() -> bool;

    pub fn geode_free_string(s: *mut c_char);
}

pub fn log_info(msg: &str) {
    let c_msg = CString::new(msg).unwrap();
    unsafe { geode_log_info(c_msg.as_ptr()) };
}

pub fn log_warn(msg: &str) {
    let c_msg = CString::new(msg).unwrap();
    unsafe { geode_log_warn(c_msg.as_ptr()) };
}

pub fn log_error(msg: &str) {
    let c_msg = CString::new(msg).unwrap();
    unsafe { geode_log_error(c_msg.as_ptr()) };
}